--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
-    "redis": "^4.0.0-rc.3",
-    "telegraf": "^4.4.2"
+    "grammy": "^1.3.4",
+    "redis": "^4.0.0-rc.3"
   }
 }
